; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_strv.c_strv_free_free.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_strv.c_strv_free_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8*** @strv_free_free(i8*** %0) #0 {
  %2 = alloca i8***, align 8
  %3 = alloca i8***, align 8
  %4 = alloca i8***, align 8
  store i8*** %0, i8**** %3, align 8
  %5 = load i8***, i8**** %3, align 8
  %6 = icmp ne i8*** %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i8*** null, i8**** %2, align 8
  br label %24

8:                                                ; preds = %1
  %9 = load i8***, i8**** %3, align 8
  store i8*** %9, i8**** %4, align 8
  br label %10

10:                                               ; preds = %18, %8
  %11 = load i8***, i8**** %4, align 8
  %12 = load i8**, i8*** %11, align 8
  %13 = icmp ne i8** %12, null
  br i1 %13, label %14, label %21

14:                                               ; preds = %10
  %15 = load i8***, i8**** %4, align 8
  %16 = load i8**, i8*** %15, align 8
  %17 = call i32 @strv_free(i8** %16)
  br label %18

18:                                               ; preds = %14
  %19 = load i8***, i8**** %4, align 8
  %20 = getelementptr inbounds i8**, i8*** %19, i32 1
  store i8*** %20, i8**** %4, align 8
  br label %10

21:                                               ; preds = %10
  %22 = load i8***, i8**** %3, align 8
  %23 = call i8*** @mfree(i8*** %22)
  store i8*** %23, i8**** %2, align 8
  br label %24

24:                                               ; preds = %21, %7
  %25 = load i8***, i8**** %2, align 8
  ret i8*** %25
}

declare dso_local i32 @strv_free(i8**) #1

declare dso_local i8*** @mfree(i8***) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
